# sumwars-code

./: .hgignore  .hgtags  AUTHORS  CMakeLists.txt  COPYING  INSTALL  License.txt  Makefile.am  Makefile.in  README  Sumwars_installer_bitrock.xml  aclocal.m4  authors.txt  config.h.in  configure  configure.ac  configure.in  install.cmd  items.xml  ogre.cfg  plugins_mac.cfg  plugins_win.cfg  rename.lua  renameLowercase.sh  resources  resources.cfg  resources.cfg.in  swpreload.cfg
Dependencies/Raknet2_0/: CMakeLists.txt  LINUX_README  Makefile  RakNet.dev  RakNet.dsw  RakNet.pc  RakNet.sln  makefile.defs  readme.txt
Dependencies/Raknet2_0/Help/: autopatcher.html  bitstreams.html  clientfunctionlist.html  compilersetup.html  creatingpackets.html  datacompression.html  detailedimplementation.html  faq.html  history.txt  index.html  introduction.html  natpunchthrough.html  networkmessages.html  peerfunctionlist.html  preprocessordirectives.html  programmingtips.html  rakvoice.html  receivingpackets.html  reliabilitytypes.html  remoteprocedurecalls.html  revisionlog.html  samples.html  secureconnections.html  sendingpackets.html  serverfunctionlist.html  statistics.html  systemoverview.html  timestamping.html  tutorial.html  tutorialsample1.html  tutorialsample2.html  tutorialsample3.html  tutorialsample4.html  tutorialsample5.html  tutorialsample6.html
Dependencies/Raknet2_0/Help/DOxygen/: AES128_8cpp.html  AES128_8h.html  ArrayList_8h.html  AsynchronousFileIO_8cpp.html  AsynchronousFileIO_8h.html  Autopatcher_8cpp.html  (+372 more)
Dependencies/Raknet2_0/Include/: AES128.h  ArrayList.h  AsynchronousFileIO.h  BigTypes.h  BinarySearchTree.h  BitStream.h  CheckSum.h  ClientContextStruct.h  DataBlockEncryptor.h  DistributedNetworkObject.h  DistributedNetworkObjectHeader.h  DistributedNetworkObjectManager.h  DistributedNetworkObjectStub.h  EncodeClassName.h  ExtendedOverlappedPool.h  GetTime.h  HuffmanEncodingTree.h  HuffmanEncodingTreeFactory.h  HuffmanEncodingTreeNode.h  InternalPacket.h  InternalPacketPool.h  LinkedList.h  MTUSize.h  Multiplayer.h  NetworkObject.h  NetworkTypes.h  PacketEnumerations.h  PacketPool.h  PacketPriority.h  Queue.h  QueueLinkedList.h  RPCNode.h  RSACrypt.h  RakClient.h  RakClientInterface.h  RakNetStatistics.h  RakNetworkFactory.h  RakPeer.h  RakPeerInterface.h  RakServer.h  (+8 more)
Dependencies/Raknet2_0/Lib/: RakNetDLL.lib  RakNetLibStatic.lib  RakVoiceDLL.lib  RakVoiceLibStatic.lib  zLibStatic.lib  zLibStaticDebug.lib
Dependencies/Raknet2_0/Samples/: readme.txt
Dependencies/Raknet2_0/Source/: AES128.cpp  AsynchronousFileIO.cpp  BitStream.cpp  CheckSum.cpp  DataBlockEncryptor.cpp  DistributedNetworkObject.cpp  DistributedNetworkObjectManager.cpp  DistributedNetworkObjectStub.cpp  EncodeClassName.cpp  ExtendedOverlappedPool.cpp  GetTime.cpp  HuffmanEncodingTree.cpp  HuffmanEncodingTreeFactory.cpp  InternalPacketPool.cpp  Makefile  NetworkObject.cpp  NetworkTypes.cpp  PacketPool.cpp  RPCNode.cpp  RakClient.cpp  RakNetStatistics.cpp  RakNetworkFactory.cpp  RakPeer.cpp  RakServer.cpp  Rand.cpp  ReliabilityLayer.cpp  SHA1.cpp  SimpleMutex.cpp  SocketLayer.cpp  StringCompressor.cpp
Dependencies/Raknet2_0/speex-1.1.4/: AUTHORS  Makefile.in  Speex.spec  TODO  aclocal.m4  configure  configure.in  ltmain.sh  mkinstalldirs
Dependencies/Raknet2_0/zLib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
src/: Makefile  Makefile.am  Makefile.in  Makefile.objs  Makefile.objs_old  config.h.in  plugins.cfg  sumwars.cbp
src/core/: Makefile  Makefile.objs  action.cpp  action.h  archer.cpp  archer.h  charconv.cpp  charconv.h  clientnetwork.cpp  clientnetwork.h  command.cpp  command.h  constants.h  creature.cpp  creature.h  creaturestruct.cpp  creaturestruct.h  damage.cpp  damage.h  debug.cpp  debug.h  dialogue.cpp  dialogue.h  dmgprojectile.cpp  dmgprojectile.h  document.cpp  document.h  dropitem.cpp  dropitem.h  dropslot.h  elementattrib.cpp  elementattrib.h  event.cpp  event.h  eventloader.cpp  eventloader.h  eventsystem.cpp  eventsystem.h  fixedbase.cpp  fixedbase.h  (+131 more)
src/enet/: README  unix.c
src/gl_gui/: Makefile  Makefile.objs  Makefile_mapgen.objs  config  main.cpp  mapgen_gl.cpp  mapgen_gl.h  window_main_gl.cpp  window_main_gl.h
src/gui/: Makefile  Makefile.objs  ShaderManager.cpp  ShaderManager.h  ShadowCameraSetup.cpp  ShadowCameraSetup.h  application.cpp  application.h  cegui-update.h  ceguiutility.cpp  ceguiutility.h  charcreate.cpp  charcreate.h  charinfo.cpp  charinfo.h  chatline.cpp  chatline.h  client.cpp  client.h  clientmplayer.cpp  clientmplayer.h  clientwobject.cpp  clientwobject.h  clipboard.cpp  clipboard.h  config.h.in  controlpanel.cpp  controlpanel.h  creditswindow.cpp  creditswindow.h  default_resources.cfg.inc.in  dialoguewindow.cpp  dialoguewindow.h  graphicmanager.cpp  graphicmanager.h  graphicobject.cpp  graphicobject.h  graphicobjectrenderinfo.cpp  graphicobjectrenderinfo.h  graphicsmanager.h  (+52 more)
src/gui/contenteditor/: contenteditor.cpp  contenteditor.h  contenteditortab.cpp  contenteditortab.h  contenttab.h  fixedobjecteditor.cpp  fixedobjecteditor.h  gameinfotab.cpp  gameinfotab.h  guiTabs.cpp  guiTabs.h  guitabs.cpp  guitabs.h  itemeditor.cpp  itemeditor.h  monstereditor.cpp  monstereditor.h  renderinfoeditor.cpp  renderinfoeditor.h  renderinfotab.cpp  renderinfotab.h
src/gui/debugpanel/: benchmarktab.cpp  benchmarktab.h  debugcameratab.cpp  debugcameratab.h  debugpanel.cpp  debugpanel.h  debugtab.cpp  debugtab.h  guidebugtab.cpp  guidebugtab.h  iconeditortab.cpp  iconeditortab.h  luascripttab.cpp  luascripttab.h  textfileeditwindow.cpp  textfileeditwindow.h
src/gussound/: goggstreamedsound.cpp  goggstreamedsound.h  gopenal.cpp  gopenal.h  gussound.cpp  gussound.h
src/gussound/gussoundutil/: abstractfactory.hpp  guslib_version.hpp  guslibbuildopts.h  random.h  singleton.hpp  singletonholder.hpp  smartptr.h  stringutil.cpp  stringutil.h  timer.cpp  timer.h  trace.h
src/tinyxml/: tinyxml.cpp  tinyxml.h
src/winicon/: Sumwars.rc  resource.h
(+2698 files in other folders)
