AC_PREREQ([2.63])
AC_INIT([sumwars], [0.01], [BUG-REPORT-ADDRESS])

AM_INIT_AUTOMAKE([foreign])

AC_CONFIG_SRCDIR([src/gui/main_gui.cpp])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in lib:
AC_CHECK_LIB([GL], [main])
AC_CHECK_LIB([glut], [main])
AC_CHECK_LIB([m], [pow])
AC_CHECK_LIB([rt], [main])
AC_CHECK_LIB([OGRE], [main])
AC_CHECK_LIB([OIS], [main])
AC_CHECK_LIB([CEGUI], [main])
AC_CHECK_LIB([CEGUI-OGRE], [main])
AC_CHECK_LIB([RakNet], [main])
AC_CHECK_LIB([freealut], [main])
AC_CHECK_LIB([openal], [main])

# Checks for header files.
AC_CHECK_HEADERS([libintl.h locale.h stddef.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_CHECK_FUNCS([floor gettimeofday memmove memset pow setlocale sqrt strchr])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT

